--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		
 	<head>
 				
-		<title>Massively by HTML5 UP</title>
+		<title>Jon Johnson 2020</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -52,7 +52,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>About me</h2>
-									<p>Hello! My name's Jon Johnson and I live in Fargo North Dakota. I'm a <br />
+									<p>Hello! My name's Jon Johnson and I live in Fargo, North Dakota. I'm a <br />
 									graduate in Computer Programming and am excited to utilize my programming knowledge <be />
 									as well as learn new languages and skills as I begin my career in programming. Thank you for taking a look at my portfolio!</p>
 								</header>
@@ -142,7 +142,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Jon's Portfolio</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>Jon Johnson 2020</li></ul>
 					</div>
 
 			</div>
